<resources>
    <string name="app_name">Spots</string>
    <string name="title_activity_maps">Spots</string>
    <string name="invalidCredentials">Please, register your credentials</string>
    <string name="emptyEmail">The email can\'t be empty</string>
    <string name="emptyPassword">The password can\'t be empty</string>
    <string name="invalidEmail">The email must have a valid format</string>
    <string name="invalidPasswordLength">The password must have at least 8 characters</string>
    <string name="anonParkTitle">Campus 2 - Park A</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="txtFree">Free:</string>
    <string name="txtOcuppied">Ocuppied:</string>
    <string name="emptyFields">The fields can\'t be empty</string>
    <string name="signUpButton">Sign Up</string>
    <string name="hintName">MyFullName</string>
    <string name="password">Password</string>
    <string name="hintPassword">myPassword</string>
    <string name="hintEmail">myEmail@myEmail.com</string>
    <string name="alreadyAuth">Already authenticated? Click here for Login</string>
    <string name="emptyName">The name can\'t be empty</string>
    <string name="invalidName">The name can\'t contain only digits</string>
    <string name="userColision">You are already registered</string>
    <string name="errorNoInternetConnection">ERROR: There is no internet connection. Try again later.</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="btnProfile">My Profile</string>
    <string name="btnLogout">Logout</string>
    <string name="btnFavouriteSpots">My favourite spots</string>
    <string name="btnUpdateMyProfile">Update my profile</string>
    <string name="btnMyPreferences">Find Me A Spot</string>
    <string name="findMeASpotPreference">Find Me A Spot Preference</string>
    <string name="confirmationPassword">Confirmation Password</string>
    <string name="noInternetConnection">No Internet connection</string>
    <string name="txtLastInfoDate">Latest data obtained at:</string>
    <string name="OK">OK</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="emptyConfirmationPass">The confirmation password can\'t be empty</string>
    <string name="errorConfirmationPass">The confirmation password must be equal to the password</string>
    <string name="none">None</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirmPassword">Please insert your password to confirm:</string>
    <string name="invalidPassword">The password inserted does not match with your current password</string>
    <string name="noChanges">Nothing was changed</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hamburgerTitle">Options</string>
    <string name="chooseWhatSpotYouWantToSee">Please, choose what spot you want.</string>
    <string name="theBestRatedSpotAvailable">The best rated spot available</string>
    <string name="theSpotCloserToMe">The spot closer to me</string>
    <string name="oneOfMyFavouriteSpotAvailable">One of my favourite spot available</string>
    <string name="current_password">Please. insert your current password:</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirmation">New Password Confirmation</string>
    <string name="errorNewPasswordEquals">The new password must be different from the current password</string>
    <string name="btnReturn">Return to Dashboard</string>
    <string name="delete">Delete</string>
    <string name="emptySpotsList">Your favourite spots list is empty</string>
    <string name="noFreeSpots">No free spots available</string>

    <string name="errorPermissionLocationDenied">\"You can\'t access this funcionality if the application don\'t have permission to access your location.\"</string>
    <string name="noFavouriteSpotsFree">All of your favourite spots are occupied</string>
    <string name="noSpotFree">All spots are occupied</string>
    <string name="infoForUserParkManually">Please, select the spot where you want to park.</string>
    <string name="msgAskUserIfWantToPark">Do you want to park in the spot selected?</string>
    <string name="msgAskUserIfHeParked">Did you park in this spot?</string>
    <string name="errorUserAlreadyParked">You are already parked.</string>
    <string name="errorUserIsNotParked">You aren\'t parked.</string>
    <string name="askUserIsLeavingTheSpot">Are you leaving the spot?</string>
    <string name="rateTheSpot">Do you want to rate the spot?</string>
    <string name="askWantsAddToFavourites">Add to my favourites</string>
    <string name="close">Close</string>
    <string name="sendRate">Send Rate</string>
    <string name="infoRateSended">Rate sended.</string>
    <string name="infoSpotIsFavourite">\"This spot is one of your favourites.\"</string>
    <string name="totalRegistered">Total Registered Users</string>
    <string name="statisticsTitle">Statistical Information</string>
    <string name="totalLoggedUsers">Total Logged Users</string>
    <string name="totalParkedUsers">Total Parked Users</string>
    <string name="topBestRated">Top 5 Best Rated Spots</string>
    <string name="topMostParked">Top 5 Most Parked Spots</string>
    <string name="findMeASpotTitle">Find Me a Spot Medium Time</string>
    <string name="best_rated">Best Rated Time</string>
    <string name="closerLocation">Closer Location Time</string>
    <string name="myFavourites">My Favourites List Time</string>
    <string name="occupationRateTittle">Occupation Rate At This Moment</string>
    <string name="initialDate">Insert Initial Date</string>
    <string name="finalDate">Insert Final Date</string>
    <string name="hintDatetime">dd/mm/yyyy</string>
    <string name="performanceBtn">View Occupation Rate And Find Me a Spot Performance</string>
    <string name="invalidDateFormat">The initial and final dates must be valid and in format dd/mm/yyyy</string>
    <string name="invalidInitialDate">The initial date can not be higher or equal to the final date</string>
    <string name="invalidInitialDateActual">The date must van not be higher or equal to the actual date</string>
    <string name="noDataFound">No data found for given time period</string>
    <string name="displayGraph">Show Occupation Rate Evolution On Period</string>
    <string name="titleReportIncident">Report Incident</string>
    <string name="titleReportDescription">Description</string>
    <string name="titleReportLocation">Location</string>
    <string name="txtBtnReportGetCurrentLocation">Get My Current Location</string>
    <string name="txtBtnReportChooseParkAndSpot">Choose a park and a spot</string>
    <string name="txtViewChooseAPark">Choose a park</string>
    <string name="txtViewChooseASpot">Choose a spot</string>
    <string name="infoReportGotUserLocation">Your location was successfully obtained.</string>
    <string name="errorReportDescriptionEmpty">Description can\'t be empty.</string>
    <string name="errorReportLocationNotPut">ERROR: You need to put a location.</string>
    <string name="incidentReportedWithSuccess">The incident was reported with success.</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="txtViewInfoUploadedSuccess">Image obtained with success.</string>
    <string name="errorPermissionStorageDenied">You can\'t access this funcionality if the application doesn\'t have permission.</string>
    <string name="incidentsEmptyList">There\'s no incidents reports.</string>
    <string name="titleReportSpot">Spot Location</string>
    <string-array name="findPreferencesOptions">
        <item>None</item>
        <item>Closer To My Location</item>
        <item>Best Rated Place</item>
        <item>My Favourite Spots</item>
    </string-array>
    <string-array name="dashboardIems">
        <item>Profile</item>
        <item>Find me a spot</item>
        <item>My favourite spots</item>
        <item>Park Manually</item>
        <item>My spot</item>
        <item>Leave My Spot</item>
        <item>Statistics</item>
        <item>Change my password</item>
        <item>Incidents Reports List</item>
        <item>Report an Incident</item>
        <item>Logout</item>
        <item>Algorithm Performance</item>
        <item>Occupation Rate During Time</item>
    </string-array>
</resources>
