<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintName"
        android:autofillHints="@string/hintName"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:autofillHints="@string/hintEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintPassword"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmationPassword"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextConfirmationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintPassword"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_btnRegister"
        android:layout_marginTop="80dp"
        android:text="@string/btnRegister" />

    <Button
        android:id="@+id/btnAlreadyAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:onClick="onClick_btnAlreadyAuth"
        android:text="@string/alreadyAuth"
        android:textColor="#0080ff" />
</LinearLayout>

