<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findMeASpotPreference"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnMyPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="onClick_findMeASpot"
        android:padding="20dp"
        android:text="@string/btnMyPreferences"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"

        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFavouriteSpots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClick_btnFavouriteSpots"
        android:text="@string/btnFavouriteSpots" />

    <Button
        android:id="@+id/btnUpdateMyProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClick_updateMyProfile"
        android:text="@string/btnUpdateMyProfile" />
</LinearLayout>