<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePasswordActivity"
    android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_password"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintPassword"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintPassword"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password_confirmation"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editNewPasswordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintPassword"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnSaveReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClick_btnSave"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_btnCancel"
        android:text="@string/cancel" />
</LinearLayout>