<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseAPreferenceActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="134dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseWhatSpotYouWantToSee"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <Button
        android:id="@+id/btnBestRatedSpot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickBtnBestRatedSpot"
        android:text="@string/theBestRatedSpotAvailable" />

    <Button
        android:id="@+id/btnCloserToMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickBtnCloserToMe"
        android:text="@string/theSpotCloserToMe" />

    <Button
        android:id="@+id/btnOneOfFavourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickBtnOneOfFavouriteSpots"
        android:text="@string/oneOfMyFavouriteSpotAvailable" />

</LinearLayout>