<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="70dp"
    tools:context=".DatePickActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/initialDate"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextInitDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintDatetime"
        android:hint="@string/hintDatetime"
        android:inputType="datetime"
        android:paddingBottom="10dp"/>


    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/finalDate"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextFinalDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintDatetime"
        android:hint="@string/hintDatetime"
        android:inputType="datetime"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/btnDisplayGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_btnDesplayGraph"
        android:paddingBottom="10dp"
        android:text="@string/displayGraph" />


</LinearLayout>