<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IncidentReportDetailsActivity"
    android:paddingTop="70dp">

    <TextView
        android:id="@+id/textViewSpotDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/titleReportSpot"
        android:paddingVertical="2dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtReportDetailSpot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textViewLocationDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/titleReportLocation"
        android:paddingVertical="2dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtReportDetailLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleReportDescription"
        android:background="@android:color/holo_blue_light"
        android:paddingVertical="2dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:id="@+id/txtReportDetailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

</LinearLayout>